-------------------
- Internal work and lots of fixes

Reggie, 18.12.1998:
-------------------
- Started with headers and footers (it's not working yet!)

Reggie, 19.12.1998:
-------------------
- More work on headers and footers

Reggie, 20.12.1998:
-------------------
- Internals of headers and footers are working now - tomorrow the visible (and useable :-) part
  and saving/loading will follow

Reggie, 21.12.1998:
-------------------
- Fixes with loading/saving docs
- More work on the internals of headers/footers (don't try it out yet - it crashes very often)

Reggie, 22.12.1998:
-------------------
- Simple headers/footers are working
- Implemented printing headers/footers
- Text of parags should be saved with <TEXT>Some Text here</TEXT> now and not with <TEXT value="Some Text here"/> anymore.
  The old version (<TEXT value="..."/>) is still supported for compatibility, but really shouldn't be used anymore.
  (Of course KWord itself saves text with <TEXT>...</TEXT> now too :-)

Reggie, 23.12.1998:
-------------------
- Fixed a bug when loading framesets with no text (1 parag with textlen == 0)
- Implemented loading/saving headers/footes (Kalle, I'll send you a mail with the new tags/attributes)
- Some fixes
- Different footer/header for first page and the rest of the doc start working now (there are still some problems)

Reggie, 25.12.1998:
-------------------
- Different footer/header for first page and the rest of the doc are working fine now (also for printing)
- Fixes when loading headers/footers
- Different headers/footers for even and odd pages works now

Reggie, 26.12.1998:
-------------------
- Printing of different headers/footers of even and odd pages works now
- Bugfixes

Reggie, 27.12.1998:
-------------------
- Speed improvements again (now the number of used fonts/formats doesn't influence the speed anymore)
- Worked a bit on the DTD
- Reorganized UI of stylist (with german translation ig got much too wide)
- Started implementing spellchecking